@@ -1,3 +1,13 @@
+2011-11-23  Pearly Zhao <pearly.zhao@oracle.com>
+
+	* include/sys/link.h: Remove.
+	* include/rtld_db.h: Include link.h.
+	* include/sys/machelf.h: Likewise.
+	* libdtrace/drti.c: Delare Link_map.
+	* libproc/Psymtab.c: Remove the cases that do not exist on Linux.
+	* libproc/Psymtab_machelf32.c: Likewise.
+	 
+
 2011-11-03  Nick Alcock  <nick.alcock@oracle.com>
 
 	* runtest.sh: Document --quiet and --verbose.
